# example-seaborn

./: README.md  legend.ipynb  pyproject.toml
